...
    <!-- 1.125/0.975*100%=115% -->
    <!-- 1.25/0.95*100%=131% -->
    <com.liweiyap.narradir.ui.fonts.CustomTypefaceableCheckableObserverButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.25"
        android:id="@+id/p10Button"
        android:contentDescription="@string/p10_button_contentdescription"
        android:text="@string/p10_button_text"
        android:alpha="0.5"
        style="@style/PlayerNumberSelectorStyleSecretHitler"
        com.liweiyap.narradir:defaultCheckedState="false" />

...
